sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:23: error: too many arguments for method deplacerJoueur: (pos: Int, arrive: Int)Unit
            deplacerJoueur(nPos, nCouleur, 1);
                          ^SelectBaseball:45: error: not found: value nBase
  deplacerTrou((nBase+1)%nbBases, 0, -1);
                ^SelectBaseball:65: error: not found: value sens
    deplace(mod(currBase+sens, nbBases), 0);
                         ^